--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.9.7",
     "@mui/material": "^5.10.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,9 +23,12 @@
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-player": "^2.10.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
+    "redux": "^4.2.0",
+    "redux-typescript": "^1.2.1",
     "sass": "^1.54.4",
     "swiper": "^8.3.2",
     "typescript": "^4.7.4",
