--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-dom": "^18.0.6",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
+    "react-calendar": "^3.8.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
